add new litex requirement that we don't use but must have to prevent a build failure

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "deps/pythondata-cpu-vexriscv"]
 	path = deps/pythondata-cpu-vexriscv
 	url = https://github.com/betrusted-io/pythondata-cpu-vexriscv.git
+[submodule "deps/pythondata-software-picolibc"]
+	path = deps/pythondata-software-picolibc
+	url = https://github.com/antmicro/pythondata-software-picolibc
